fix images alignment

--- a/app/views/detail.module.css
+++ b/app/views/detail.module.css
@@ -11,6 +11,7 @@
   display: flex;
   row-gap: 10vw;
   margin-block: 10vw;
+  padding-inline: 3vw;
 }
 .container li {
   /* display: block; */
@@ -75,20 +76,23 @@
 .place .images {
   grid-column: 3;
   grid-row: 1 / span 2;
+  width: 100%;
+  max-width: 55em;
   display: flex;
   flex-direction: column;
   justify-self: end;
   justify-content: space-evenly;
-  padding-inline: 3vw;
 }
 .place .images img {
-  width: 100%;
+  width: min(93%, 27em);
   height: auto;
 }
 .place .images img.plantingGirls {
-  width: 80%;
-  position: relative;
-  left: -10%;
+  width: min(75%, 20em);
+  align-self: flex-start;
+}
+.place .images img.fluteGirls {
+  align-self: flex-end;
 }
 
 .community {
@@ -115,10 +119,7 @@
 img.treetemple {
   width: 700px;
   display: inline-block;
-  /* transform: scale(1.3) translate(10%, 45%); */
-  /* margin-bottom: 35%; */
   transform: scale(1.1) translate(-5%, 10%);
-  /* transform: translate(-5%, 10%); */
   margin-top: 0;
   margin-bottom: 10%;
 }
@@ -183,17 +184,6 @@ img.treetemple {
     padding-left: unset;
     margin-block: 7vw;
     row-gap: 8vw;
-  }
-  .place .images img {
-    position: relative;
-  }
-  .place .images img:first-child {
-    left: -10%;
-    width: min(70vw, 250px);
-  }
-  .place .images img:last-child {
-    left: 5%;
-    width: min(80vw, 300px);
   }
   .community h2::before {
     transform: translateX(-99%);
